Run periodic check set VF mac admin in case of reset
Signed-off-by: Mamduh Alassi <mamduhala@mellanox.com>

--- a/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
+++ b/config/crd/bases/sriovnetwork.openshift.io_sriovnetworknodestates.yaml
@@ -44,6 +44,8 @@ spec:
                   properties:
                     eSwitchMode:
                       type: string
+                    isRdma:
+                      type: boolean
                     linkType:
                       type: string
                     mtu:
